# CHIP-8

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  RESOURCES.md
.github/workflows/: build.yml  codeql.yml  test.yml  tests.yml
chip8/: CMakeLists.txt  main.dox
chip8/backend/src/: CMakeLists.txt  backend_pre_compiled_header.c  backend_pre_compiled_header.h  debug.h  display.c  display.h  keyboard_state.c  keyboard_state.h  virtual_machine.c  virtual_machine.h
chip8/base/src/: CMakeLists.txt  chip8.h  dynamic_array_code_gen.h  exit_code.h  logger.h  memory.h  table.h  table_code_gen.h
chip8/frontend/: CMakeLists.txt
chip8/frontend/src/: CMakeLists.txt  address_hash_table.c  address_hash_table.h  addresses_hash_table.c  addresses_hash_table.h  array_code_gen.h  assembler.c  assembler.h  dynamic_address_array.c  dynamic_address_array.h  dynamic_array_code_gen.h  fnv1a.c  fnv1a.h  frontend_pre_compiled_header.c  frontend_pre_compiled_header.h  memory.h  table.h
chip8/frontend/test/: CMakeLists.txt  fnv1a.cpp
chip8/io/src/: CMakeLists.txt  file_utils.c  file_utils.h  io_pre_compiled_header.c  io_pre_compiled_header.h  path_utils.h
chip8/main/src/: CMakeLists.txt  main.c
cmake/: chip8_check.cmake  chip8_check_dependencies.cmake  chip8_detect_platform.cmake  chip8_determine_compiler.cmake  chip8_set_package_properties.cmake
docs/: address__hash__table_8c.html  address__hash__table_8c.js  address__hash__table_8h.html  address__hash__table_8h.js  address__hash__table_8h_source.html  addresses__hash__table_8c.html  addresses__hash__table_8c.js  addresses__hash__table_8h.html  addresses__hash__table_8h.js  addresses__hash__table_8h_source.html  alias_8h.html  alias_8h.js  alias_8h_source.html  annotated.html  annotated_dup.js  assembler_8c.html  assembler_8c.js  assembler_8h.html  assembler_8h.js  assembler_8h_source.html  backend_2pre__compiled__header_8c.html  backend_2pre__compiled__header_8h.html  backend_2pre__compiled__header_8h_source.html  backend__pre__compiled__header_8c.html  backend__pre__compiled__header_8h.html  backend__pre__compiled__header_8h_source.html  chip8_8c.html  chip8_8c.js  chip8_8h.html  chip8_8h.js  chip8_8h_source.html  classes.html  common_8h.html  common_8h.js  common_8h_source.html  debug_8c.html  debug_8c.js  debug_8h.html  debug_8h.js  debug_8h_source.html  (+147 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  (+25 more)
example/: HelloWorld.cp8
examples/: Breakout.cp8  Graphics.cp8  HelloWorld.cp8  HelloWorldHex.cp8  hexSprites.cp8
scripts/: build.bat  build.lua  build_debug.bat  build_debug.sh  build_debug_full_debug.bat  build_debug_print_bytecode.bat  build_debug_trace_execution.bat  build_release.bat  build_release.sh  docs.bat  docs.lua  docs.sh  format.bat  format.lua  install.bat  install.lua  install.sh  package.bat  package.lua  package.sh  release.sh  release_gcc.bat  release_msvc.bat
src/: CMakeLists.txt  Doxyfile  address_hash_table.c  address_hash_table.h  assembler.c  assembler.h  chip8.c  chip8.h  chip8_config.h.in  common.h  debug.c  debug.h  display.c  display.h  file_utils.c  file_utils.h  flags.h  fnv1a.c  fnv1a.h  lexer.c  lexer.h  main.c  main.dox  path_utils.c  path_utils.h  pre_compiled_header.c  pre_compiled_header.h
src/backend/: CMakeLists.txt  chip8.c  chip8.h  debug.c  debug.h  display.c  display.h  keyboard_state.c  keyboard_state.h  path_utils.c  path_utils.h  pre_compiled_header.h  virtual_machine.c  virtual_machine.h
src/base/: CMakeLists.txt  alias.h  exit_code.h
src/frontend/: CMakeLists.txt  address_hash_table.c  address_hash_table.h  addresses_hash_table.c  addresses_hash_table.h  assembler.c  assembler.h  dynamic_address_array.c  dynamic_address_array.h  fnv1a.h  pre_compiled_header.h  table.h
src/io/: CMakeLists.txt  file_utils.c  file_utils.h  path_utils.c  path_utils.h  pre_compiled_header.h
src/main/: CMakeLists.txt  chip8_config.h.in  main.c  pre_compiled_header.h
src/utils/: file_utils.c  file_utils.h
