
set(CHIP-8_BASE_HEADER_FILES
"${CMAKE_CURRENT_SOURCE_DIR}/chip8.h"
"${CMAKE_CURRENT_SOURCE_DIR}/dynamic_array_code_gen.h"
"${CMAKE_CURRENT_SOURCE_DIR}/exit_code.h"
"${CMAKE_CURRENT_SOURCE_DIR}/logger.h"
"${CMAKE_CURRENT_SOURCE_DIR}/memory.h"
"${CMAKE_CURRENT_SOURCE_DIR}/table_code_gen.h"
"${CMAKE_CURRENT_SOURCE_DIR}/table.h"
)

add_library(${PROJECT_NAME}_Base INTERFACE)
target_sources(${PROJECT_NAME}_Base INTERFACE ${CHIP-8_BASE_HEADER_FILES})